--- a/style.css
+++ b/style.css
@@ -1,1 +1,891 @@
-temp
+body {
+    margin: 0;
+    padding: 0;
+    font-family:  Arial, Helvetica, sans-serif;
+    color: lightgray;
+}
+
+.container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 100px;
+    background-color: #001f7c38;
+}
+
+.back-vid{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    mix-blend-mode: lighten;
+}
+
+header{
+    display: flex;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    align-items: center;
+    justify-content: space-between;
+    height: 70px;
+    background-color: rgba(255, 255, 255, 0.123);
+    backdrop-filter: blur(10px);
+    padding: 0 30px;
+    box-shadow: 0 0 15px #72a1de8d;
+    z-index: 999;
+
+}
+
+.left{
+    display: flex;
+    align-items: center;
+}
+
+.left img{
+    width: 40px;
+    margin: 0 15px;
+}
+
+header ul{
+    display: flex;
+    justify-content:  space-between;
+    width: 30%;
+    padding: 15px 15px;
+    border-radius: 50px;
+    background-color: rgba(0, 0, 69, 0.30);
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 10px #727fdea0;
+}
+
+
+
+header ul li{
+    list-style: none;
+}
+
+
+
+header ul a{
+    text-decoration: none;
+    color: white;
+    font-weight: 700;
+    margin: 0 10px;
+}
+
+.box-icons{
+    display: flex;
+    gap: 40px;
+}
+
+
+.box-icons a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    width: 30px;
+    height: 30px;
+    border: 2px solid #727fde;
+    text-decoration: none;
+    color: lightgray;
+    border-radius: 50%;
+    transition: 0.3s;
+}
+
+
+.box-icons a:hover{
+    background-color: #727fde;
+    color: black;
+    box-shadow: 0 0 15px #727fde6f;
+}
+
+.blackhole-box{
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    justify-content: center;
+    mix-blend-mode: lighten;
+}
+
+.blackhole-box video{
+    width: 100%;
+    margin-top: -23.5%;
+}
+
+
+.hero{
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.hero-info{
+    position: absolute;
+    left: 5%;
+}
+
+.hero-info .hero-info-title{
+    color: #727fde;
+    padding: 8px 5px;
+    border: 1px solid #727fde77;
+    width: 240px;
+    background-color: #2200493d;
+    box-shadow: 0 0 5px #727fde88;
+    border-radius: 50px;
+}
+
+.hero-info h1{
+    font-size: 60px;
+    max-width: 600px;
+    font-weight: 700;
+    line-height: 70px;
+    margin-top: 40px;
+    margin-bottom: 30px;
+}
+
+.hero-info p{
+    max-width: 550px;
+    line-height: 25px;
+    margin-bottom: 40px;
+    font-size: 20px;
+}
+
+.hero-info button{
+    color: white;
+    padding: 15px 35px;
+    border-radius: 10px;
+    border: 1px solid #727fdeb4;
+    background-color: #2200493d;
+    box-shadow: 0 0 5px #727fde86;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.hero-info button:hover{
+    box-shadow: 0 0 15px #727fde86;
+
+}
+
+
+.gradient{
+    background: linear-gradient(to right, #008baa, #7e42a7, #6600c5, #6070fd, #2a46ff,
+    #0099ff, #008ead);
+    background-size: 200%;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: animate-gradient 2.5s linear infinite;
+}
+
+
+@keyframes animate-gradient {
+    to{
+        background-position: 200%;
+    }
+    
+}
+
+
+/*.her-vid-box{
+    position: absolute;
+    right: 20%;
+}
+
+
+.hero-vid-box video{
+    height: 600px;
+}*/
+
+
+/*.scroll-down{
+    height: 50px;
+    width: 30px;
+    border: 2px solid lightgray;
+    position: absolute;
+    left: 49%;
+    bottom: 8%;
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: 0 0 15px rgba(211, 211, 211, 0.477);
+
+}
+
+
+.scroll-down::before,
+.scroll-down::after {
+    content: "";
+    top: 20%;
+    left: 49px;
+    height: 10px;
+    width: 10px;
+    border: 2px solid lightgray;
+    transform: translate(-50, 100%) rotate(45deg);
+    border-top: transparent;
+    border-left: transparent;
+    animation: scroll-down 2s ease-in-out infinite;
+}*/
+
+
+.scroll-down::before{
+    top: 30%;
+    animation-delay: 0.5s;
+}
+
+
+@keyframes scroll-down {
+    0% {
+        opacity: 0;
+    }
+    30%, 60% {
+        opacity: 1;
+    }
+    100% {
+        top: 90%;
+        opacity: 0;
+    }  
+}
+
+
+.info-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin-top: 100px;
+}
+
+
+.section-title{
+    font-size: 40px;
+    font-weight: 700;
+}
+
+
+.info-cards{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 20px;
+    width: 100%;
+    height: 100%;
+    margin-top: 30px;
+}
+
+.card{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+    width: auto;
+    height: 40vh;
+    overflow: hidden;
+    border: 1px solid gray;
+    background-color: #090020b7;
+    border-radius: 20px;
+    transition: 0.3s;
+}
+
+
+.card img{
+    width: 80%;
+    height: 50%;
+    object-fit: cover;
+}
+
+
+.card h1{
+    position: absolute;
+    margin: 0;
+    bottom: 40%;
+    left: 5%;
+    font-size: 25px;
+    z-index: 1;
+    color: lightgray;
+}
+
+
+.card p{
+    position: absolute;
+    bottom: 3%;
+    left: 5%;
+    z-index: 1;
+    max-width: 300px;
+    color: gray;
+    font: 13px;
+    line-height: 20px;
+}
+
+
+.card video{
+    margin-top: 10%; /*10% 70% 50%*/
+    width: 100%;
+    height: 200%;
+    object-fit: cover;
+    mix-blend-mode: lighten;
+}
+
+
+.card button{
+    color: white;
+    padding: 10px 15px;
+    margin-right: 30%;
+    margin-bottom: 50%;
+    border-radius: 0px;
+    left: 30%;
+    border: 1px solid #727fdeb4;
+    background-color: #2200493d;
+    box-shadow: 0 0 5px #727fde86;
+    cursor: pointer;
+    transition: 0.3s;
+    font-size: 20px;
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+
+}
+
+.card button:hover{
+    box-shadow: 0 0 15px #727fde86;
+    opacity: 0.7;
+}
+
+
+.card:hover{
+    box-shadow: 0 0 15px rgba(211, 211, 211, 0.5);
+}
+
+
+/*.card:nth-child(3){
+    grid-row: span 2;
+    height: 83vh;
+}*/
+
+
+/**.card:nth-child(3){
+    bottom: 12%;
+}*/
+
+/*.card:nth-child(3) h1 {
+    bottom: 21%;
+}*/
+
+
+/*.card:nth-child(4){
+    grid-column: span 2;
+}*/
+
+/*.card:nth-child(4)P{
+    max-width: 650px;
+}*/
+
+/*.card:nth-child(4) h1{
+    bottom: 35%;
+}*/
+
+
+
+
+
+/* My projects*/
+
+.my-projects{
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
+    align-items: center;
+    position: relative;
+    width: 80%;
+    height: 100vh;
+    margin-top: 200px;
+    margin-bottom: 700px;
+}
+
+
+.project-card{
+    display:flex;
+    width: 100%;
+    height: 40%;
+    align-items: center;
+    gap: 10%;
+    justify-content: center;
+}
+
+
+.project-vidbox{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    position: relative;
+    cursor: pointer;
+    min-width: 400px;
+    transition: 0.5s;
+    mix-blend-mode: exclusion;
+}
+
+
+.project-vidbox video{
+    object-fit: cover;
+    width: 100%;
+    box-shadow: 0 0 10p lightgray;
+    border-radius: 20px;
+    transition: 0.5s;
+}
+
+
+.project-vidbox video:hover{
+    box-shadow: 0 0 20px lightgray;
+}
+
+
+.project-info{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    width: 50%;
+    padding-left: 10%;
+}
+
+
+.project-info h1{
+    width: 90%;
+    font-size: 25px;
+    font-weight: bold;
+    text-wrap: nowrap;
+    margin-bottom: 10px;
+    margin-top: 0;
+    max-width: 450px;
+}
+
+
+.project-info p{
+    width: 90%;
+    max-width: 400px;
+    min-width: 300px;
+    margin-bottom: 50px;
+    margin-top: 0;
+}
+
+
+.project-info button{
+    color: white;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border: 1px solid #727fdeb4;
+    background-color: #2200493d;
+    box-shadow: 0 0 5px #727fde86;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+
+.project-info button:hover{
+    box-shadow: 0 0 15px #727fde86;
+    opacity: 0.7;
+}
+
+
+.hover-sign{
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30%;
+    height: 100px;
+
+}
+
+
+.hover-sign::before,
+.hover-sign::after{
+    content: 🖱️ ;
+    text-align: center;
+    position: absolute;
+    font-size: 50px;
+    top: 20%;
+    left: 40%;
+    border-radius: 50%;
+    animation: hoverAnimtion 3s ease-in-out infinite;
+}
+
+
+@keyframes hoverAnimation {
+    0% {
+        box-shadow: 0 0 5px lightgray;
+        transform: translate(100%, 50%) rotate(30deg);
+    }
+    100%{
+        box-shadow: 0 0 15px lightgray;
+        transform: translateX(80%, 50%) rotate(0deg);
+    }
+}
+
+
+.hover-sign.active{
+    display: nones;
+}
+
+
+
+
+
+
+/* My Skills*/
+
+
+.skills-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+
+.skills-box{
+    width: 100%;
+    height: 90%;
+    position: relative;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+}
+
+
+
+.skills-image{
+    width: 70%;
+    mix-blend-mode: lighten;
+    opacity: 0.7;
+}
+
+.sk{
+    width: 70%;
+    mix-blend-mode: lighten;
+    opacity: 0.7;
+}
+
+
+.designer{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    top: 25%;
+    left: 5%;
+    max-width: 300px;
+}
+
+
+.coder{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    top: 25%;
+    right: 5%;
+    max-width: 300px;
+}
+
+
+.skills-box h1{
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+}
+
+
+.skills-box p{
+    line-height: 23px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* TABLET RESPONSIVE */
+
+@media screen and (max-width: 1000px) {
+    .blackhole-box video{
+        margin-top: -20%;
+    }
+
+
+    .hero-info h1{
+        font-size: 40px;
+        max-width: 400px;
+        line-height: 40px;
+    }
+
+    .hero-info p{
+        max-width: 300px;
+    }
+
+    .hero-vid-box{
+        right: 0;
+    }
+
+
+    .hero-vid-box video{
+        height: 500px;
+    }
+
+    .section-title{
+        font-size: 30px;
+    }
+
+    .info-cards{
+        grid-template-columns: auto;
+    }
+
+    .card:nth-child(3){
+        grid-column: span 2;
+        height: 70vh;
+    }
+
+    .info-cards .card h1{
+    font-size: 20px;
+    }
+
+    .card:nth-child(3) h1{
+        bottom: 25%;
+
+    }
+
+    .card video{
+        height: 65%;
+        margin-top: 5%;
+    }
+
+    .my-projects{
+        margin-bottom: 300px;
+    }
+
+
+    .project-vidbox video{
+        width: 250px;
+        margin-left: -100px;
+    }
+
+    .project-info{
+        padding-left: 0;
+        margin-left: -50px;
+    }
+
+
+    .project-info h1{
+        font-size: 20px;
+        max-width: 200px;
+        text-wrap: wrap;
+    }
+
+
+    .project-info p{
+        font-size: 10px;
+        max-width: 200px;
+        text-wrap: wrap;
+        min-width: 0;
+    }
+
+    footer h1{
+        font-size: 20px;
+    }
+}
+
+@media screen and (max-width:700px){
+
+
+
+    header{
+        position: fixed;
+        height: 5àpx;
+    }
+
+    header ul{
+        display: none;
+    }
+
+    header .box-icons{
+        display: none;
+    }
+
+    header h1{
+        font-size: 25px;
+    }
+
+
+    .blackhole-box video{
+        margin-top: -16%;
+    }
+
+
+    .hero{
+        flex-direction: column;
+    }
+
+
+    .autoBLur{
+        animation: none;
+    }
+
+    .hero-info{
+        bottom: 5%;
+    }
+
+
+
+    .scroll-down{
+        bottom: 5%;
+    }
+
+
+    .hero-info h1{
+        line-height: 50px;
+    }
+
+
+    .hero-vid-box{
+        height: 200px;
+        top: 5%;
+        right: 5%;
+    }
+
+    .card video{
+        width: 100%;
+    }
+
+
+    .my-projects{
+        margin-bottom: 600px;
+    }
+
+
+    .project-card{
+        flex-direction: column;
+        margin-left: 25%;
+        gap: 30px;
+    }
+
+
+    .project-info{
+        width: 85%;
+    }
+
+
+    .project-info h1{
+        text-wrap: nowrap;
+    }
+
+
+    .project-info p{
+        max-width: 300px;
+    }
+
+
+    .designer{
+        top: 15%;
+        left: 18%;
+
+    }
+
+    .coder{
+        top: 50%;
+        left: 18%;
+    }
+
+    .skills-box h1{
+        margin-bottom: 0;
+        margin-top: 70px;
+    }
+
+    .slider{
+        bottom: 0;
+    }
+
+
+    .slider img{
+        width: 60%;
+    }
+
+    .contact-section{
+        flex-direction: column;
+        margin-top: 100px;
+        margin-bottom: 50px;
+    }
+
+
+    .contact-section .section-title{
+        top: -40px;
+        left: 25%;
+    }
+
+
+    footer h1{
+        font-size: 17px;
+    }
+
+
+
+    .project-vidbox{
+        min-width: 200px;
+    }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-aspect-ratio: 16/9){
+    .back-vid{
+        width: auto;
+        height: 100%;
+        height: auto;
+    }
+}
